[Schema change] Refactored "address_type_id" and "postal_address_type_id" columns on user_addresses and group_addresses tables from being FKs onto address_types and postal_address_types tables to the two string-valued columns "logical_address_type" and "postal_address_type" columns; Added "logical_address_type" and "postal_address_type" vocabularies (currently hard-wired in ui.vocabularies), for use with the changed columns. Updated domain model and schema for, as well as related Descriptor, DC, and Admin UI associated scaffolding. Updated affected tests. Requires db refresh: ~/fabric/fl db_load_demodata

--- a/bungeni_custom/trunk/forms/ui.xml
+++ b/bungeni_custom/trunk/forms/ui.xml
@@ -415,10 +415,10 @@
     </descriptor>
 
     <descriptor name="GroupAddress">
-        <field name="address_type_id" displayable="view edit add listing" localizable="view edit listing">
+        <field name="logical_address_type" displayable="view edit add listing" localizable="view edit listing">
             <show modes="view edit listing" />
         </field>
-        <field name="postal_address_type_id" displayable="view edit add listing" localizable="view edit listing">
+        <field name="postal_address_type" displayable="view edit add listing" localizable="view edit listing">
             <show modes="view edit listing" />
         </field>
         <field name="street" displayable="view edit add listing" localizable="view edit listing">
@@ -1193,10 +1193,10 @@
     </descriptor>
 
     <descriptor name="UserAddress">
-        <field name="address_type_id" displayable="view edit add listing" localizable="view edit listing">
+        <field name="logical_address_type" displayable="view edit add listing" localizable="view edit listing">
             <show modes="view edit listing" />
         </field>
-        <field name="postal_address_type_id" displayable="view edit add listing" localizable="view edit listing">
+        <field name="postal_address_type" displayable="view edit add listing" localizable="view edit listing">
             <show modes="view edit listing" />
         </field>
         <field name="street" displayable="view edit add listing" localizable="view edit listing">
