[Schema change] Refactored "attached_file_type_id" column on attached_files table from being an FK onto attached_file_types table to a string-valued column "attached_file_type"; Removed  a fair amount of associated code in and around the custom generation of the UI vocabulary from for this type; Added "attached_file_type" vocabulary (currently hard-wired in ui.vocabularies), for use with the changed column. Updated domain model, schema and mapping, as well as related Descriptor (no associated DC adapters, Admin UI, doctests were present for AttachedFileType). Requires db refresh: ~/fabric/fl db_load_demodata

--- a/bungeni_custom/trunk/forms/ui.xml
+++ b/bungeni_custom/trunk/forms/ui.xml
@@ -82,7 +82,7 @@
         <field name="file_data" displayable="view edit add" localizable="view edit">
             <show modes="view edit" />
         </field>
-        <field name="attached_file_type_id" displayable="view edit add listing" localizable="view edit listing">
+        <field name="attached_file_type" displayable="view edit add listing" localizable="view edit listing">
             <show modes="view edit listing" />
         </field>
         <field name="file_name" displayable="edit add" />
@@ -109,7 +109,7 @@
         <field name="file_data" displayable="view edit add" localizable="view edit">
             <show modes="view edit" />
         </field>
-        <field name="attached_file_type_id" displayable="view edit add listing" localizable="view edit listing">
+        <field name="attached_file_type" displayable="view edit add listing" localizable="view edit listing">
             <show modes="view edit listing" />
         </field>
         <field name="file_name" displayable="edit add" />
