[Schema change] Refactored "attendance_type_id" column on group_sitting_attendance table from being an FK to a string-valued column "attendance_type"; Added "attendance_type" vocabulary (currently hard-wired in ui.vocabularies), for use with the changed column. Updated domain model, schema and mapping, as well as related Descriptor, DC adapters, Admin UI, doctests.  Reworked bungeni/ui/attendance.py that was manipulating directly the obsoleted FK column. Requires db refresh: ~/fabric/fl db_load_demodata

--- a/bungeni_custom/trunk/forms/ui.xml
+++ b/bungeni_custom/trunk/forms/ui.xml
@@ -126,7 +126,7 @@
         <field name="member_id" displayable="view edit add listing" localizable="view edit listing">
             <show modes="view edit listing" />
         </field>
-        <field name="attendance_type_id" displayable="view edit add listing" localizable="view edit listing">
+        <field name="attendance_type" displayable="view edit add listing" localizable="view edit listing">
             <show modes="view edit listing" />
         </field>
     </descriptor>
