--- a/bungeni_custom/trunk/forms/ui.xml
+++ b/bungeni_custom/trunk/forms/ui.xml
@@ -702,7 +702,7 @@
             <show modes="view listing" />
             <hide modes="edit" />
         </field>
-        <field name="member_election_type_id" displayable="view edit add listing" localizable="view edit listing">
+        <field name="member_election_type" displayable="view edit add listing" localizable="view edit listing">
             <show modes="view edit listing" />
         </field>
         <field name="election_nomination_date" displayable="view edit add listing" localizable="view edit listing">
