--- a/bungeni_custom/trunk/forms/ui.xml
+++ b/bungeni_custom/trunk/forms/ui.xml
@@ -926,10 +926,10 @@
         <field name="status_date" displayable="view listing" localizable="view listing">
             <show modes="view listing" />
         </field>
-        <field name="question_type_id" displayable="view edit add listing" localizable="view edit listing">
+        <field name="question_type" displayable="view edit add listing" localizable="view edit listing">
             <show modes="view edit listing" />
         </field>
-        <field name="response_type_id" displayable="view edit add listing" localizable="view edit listing">
+        <field name="response_type" displayable="view edit add listing" localizable="view edit listing">
             <show modes="view edit" />
             <hide modes="listing" />
         </field>
