Updating XHTML report templates. Download document test fixes. Test setup updates.
Templates:
 - Updating report templates in bungeni custom to use dublin core title
 - Enabling selection of a default template in generating PDF/ODT of documents
   whenever a template for that document type is not found
    - Adding a default template for documents in bungeni_custom

Converting sample body text in 'downloaddocument' tests to valid HTML fragments.
 - Mitigates elementTree exceptions when generating PDF/ODT

Test Configuration updates in bungeni.ui - required in report generation:
 - Registering User dublin core adapter
 - Registering document vocabularies

--- a/bungeni_custom/trunk/reporting/templates/scheduling/bi-weekly-questions.html
+++ b/bungeni_custom/trunk/reporting/templates/scheduling/bi-weekly-questions.html
@@ -12,7 +12,7 @@
         <h1 class="heading" br:type="text" br:source="title"/>
         <div id="listing-body">
             <div br:type="listing" br:source="sittings">
-                <h2 br:type="text" br:source="title"/>
+                <h2 br:type="text" br:source="dc:title"/>
                 <h3>Questions</h3>
                 <div class="questions">
                     <ul br:type="listing" br:source="questions">
@@ -21,6 +21,13 @@
                             <span>
                                 Asked by (<span br:type="text" br:source="dc:mover"/>)
                             </span>
+                        </li>
+                        <li><strong>Attachments:</strong>
+                            <p br:type="listing" br:source="files">
+                                <strong br:type="text" br:source="file_title">
+                                    <span>(File Title)</span>
+                                </strong>
+                            </p>
                         </li>
                     </ul>
                 </div>
