--- a/bungeni_custom/trunk/reporting/templates/scheduling/weekly-business.html
+++ b/bungeni_custom/trunk/reporting/templates/scheduling/weekly-business.html
@@ -12,7 +12,7 @@
         <h1 class="heading" br:type="text" br:source="title"/>
         <div id="listing-body">
             <div br:type="listing" br:source="sittings">
-                <h2 br:type="text" br:source="title"/>
+                <h2 br:type="text" br:source="dc:title"/>
 
                 <h3>Questions</h3>
                 <div class="questions">
