--- a/bungeni_custom/trunk/reporting/templates/documents/question.html
+++ b/bungeni_custom/trunk/reporting/templates/documents/question.html
@@ -43,7 +43,7 @@
         <div>
             <h2>Changes</h2>
             <ul br:type="listing" br:source="changes">
-                <li br:type="text" br:source="title"/>
+                <li br:type="text" br:source="dc:title"/>
             </ul>
         </div>
     </div>
