[schema change] Adding workflow to memberships: - added columns 'status' and 'status_dates' on table user_group_memberships; - adding simple 2-state workflow, initial default state 'attached' (with permissions being bound to parent item) with option to transit to a second state 'internal'; - adding domain.GroupMembership.item property (in orm.py) as an alias to domain.GroupMembership.user (to be polymorphic with other types making use of a parent item). - updating base descriptor for membership, adding status/status_date to view/listing modes. - updating worklfow permissions, and default ui xml configuration. Given the schema change, would need to update schema with: fabric$ ./fl db_load_demodata and then: cinst/bungeni$ bin/psql bungeni bungeni=# update user_group_memberships set status = 'attached'; bungeni=# \q

--- a/bungeni_custom/trunk/forms/ui.xml
+++ b/bungeni_custom/trunk/forms/ui.xml
@@ -296,6 +296,12 @@
         <field name="replaced_id" displayable="view edit listing" localizable="view edit listing">
             <hide modes="view edit listing" />
         </field>
+        <field name="status" displayable="view listing" localizable="view listing">
+            <show modes="view listing" />
+        </field>
+        <field name="status_date" displayable="view listing" localizable="view listing">
+            <show modes="view listing" />
+        </field>
         <field name="notes" displayable="view edit add" localizable="view edit add">
             <show modes="view edit add" />
         </field>
@@ -324,6 +330,12 @@
         </field>
         <field name="replaced_id" displayable="view edit listing" localizable="view edit listing">
             <hide modes="view edit listing" />
+        </field>
+        <field name="status" displayable="view listing" localizable="view listing">
+            <show modes="view listing" />
+        </field>
+        <field name="status_date" displayable="view listing" localizable="view listing">
+            <show modes="view listing" />
         </field>
         <field name="notes" displayable="view edit add" localizable="view edit add">
             <show modes="view edit add" />
@@ -590,6 +602,12 @@
         <field name="replaced_id" displayable="view edit listing" localizable="view edit listing">
             <hide modes="view edit listing" />
         </field>
+        <field name="status" displayable="view listing" localizable="view listing">
+            <show modes="view listing" />
+        </field>
+        <field name="status_date" displayable="view listing" localizable="view listing">
+            <show modes="view listing" />
+        </field>
         <field name="notes" displayable="view edit add" localizable="view edit add">
             <show modes="view edit add" />
         </field>
@@ -729,6 +747,12 @@
         <field name="replaced_id" displayable="view edit listing" localizable="view edit listing">
             <hide modes="view edit listing" />
         </field>
+        <field name="status" displayable="view listing" localizable="view listing">
+            <show modes="view listing" />
+        </field>
+        <field name="status_date" displayable="view listing" localizable="view listing">
+            <show modes="view listing" />
+        </field>
         <field name="constituency_id" displayable="view edit add listing" localizable="view edit add listing">
             <show modes="view edit add listing" />
         </field>
@@ -806,6 +830,12 @@
         <field name="replaced_id" displayable="view edit listing" localizable="view edit listing">
             <hide modes="view edit listing" />
         </field>
+        <field name="status" displayable="view listing" localizable="view listing">
+            <show modes="view listing" />
+        </field>
+        <field name="status_date" displayable="view listing" localizable="view listing">
+            <show modes="view listing" />
+        </field>
         <field name="notes" displayable="view edit add listing" localizable="view edit add listing">
             <show modes="view edit add listing" />
         </field>
@@ -857,6 +887,12 @@
         </field>
         <field name="replaced_id" displayable="view edit listing" localizable="view edit listing">
             <hide modes="view edit listing" />
+        </field>
+        <field name="status" displayable="view listing" localizable="view listing">
+            <show modes="view listing" />
+        </field>
+        <field name="status_date" displayable="view listing" localizable="view listing">
+            <show modes="view listing" />
         </field>
         <field name="notes" displayable="view edit add" localizable="view edit add">
             <show modes="view edit add" />
