- Correcting erroneous "status" field descriptor for AttachedFileVersion, that was requiring that workflow-based vocabuly but AttachedFileVersion are not workflowed (was giving a "Could not adapt" error when trying to view a *version* of an AttachedFile). - Correcting (change views) issue with generation of the URL for a *version* of an AttachedFile change item. - Enabling View permission checking of sub-objects Signatory/AttachedFile/Event when aggregating  audit/timeline data (prior to retrieving the audit data on each such sub-object).

--- a/bungeni_custom/trunk/forms/ui.xml
+++ b/bungeni_custom/trunk/forms/ui.xml
@@ -114,8 +114,8 @@
         </field>
         <field name="file_name" displayable="edit add" />
         <field name="file_mimetype" displayable="edit add" />
-        <field name="status" displayable="view edit listing" localizable="view edit listing">
-            <show modes="view edit listing" />
+        <field name="status" displayable="view listing" localizable="view listing">
+            <show modes="view listing" />
         </field>
         <field name="status_date" displayable="view listing" localizable="view listing">
             <show modes="view listing" />
