[PrivateBranch] Scheduler UI updates.
UI:
- Checking/unchecking all items in available items listing behaviour fixed
- Added filter for available items by state - TODO: bindings to data tables
- Restored remove item behaviour - added remove button to selected schedule item controls
- Selected schedule item controls now anchored at bottom left of selected item
- Item type now rendered as first item on schedule - formatted as mini text
- Updated scheduler stylesheet with available item filter styles

Resources:
- Updated dynamic scheduler resources to provide filter menu config per type
- Updated some text resource entries

--- a/bungeni.main/branches/murithi-pre-merge/bungeni/ui/resources/calendar/schedule-editor.css
+++ b/bungeni.main/branches/murithi-pre-merge/bungeni/ui/resources/calendar/schedule-editor.css
@@ -2,3 +2,20 @@
     background-color: #EBE9D2;
     text-transform:italic;
 }
+
+.schedule-available-item-filters{
+    margin:0.2em 0em;
+    padding:0.2em;
+}
+
+.schedule-available-item-filters button em {
+    font-style: normal;
+    display: block;
+    text-align: left;
+    white-space: nowrap;
+    width: 10em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+   -o-text-overflow: ellipsis;
+}
+
