--- a/bungeni_custom/trunk/themes/ke/css/skin.css
+++ b/bungeni_custom/trunk/themes/ke/css/skin.css
@@ -879,6 +879,9 @@ dl.portalMessage dd {
 .formPanel.Report4Sitting .field .content-right-column h2 {
     text-align: left;
 }
+.formPanel div:last-child {
+    text-align: justify !important;
+}
 /*
  * Calendar
  */
