--- a/bungeni.main/branches/murithi-pre-merge/bungeni/ui/resources/calendar/schedule-editor.css
+++ b/bungeni.main/branches/murithi-pre-merge/bungeni/ui/resources/calendar/schedule-editor.css
@@ -19,3 +19,24 @@
    -o-text-overflow: ellipsis;
 }
 
+label.scheduler-label{
+    display: block;
+    font-size: 13px;
+    height: 15px;
+    margin:0px 0px 2px 0px;
+}
+
+input.scheduler-bigtext{
+    border-radius:1px;
+    border: 1px solid #4D90FE;
+    color: #333;
+    display: inline-block;
+    font-size: 15px;
+    height: 32px;
+    line-height: 27px;
+    margin:2px 0 30px 0;
+    padding:3px 3px 3px 8px;
+    width: 100%;
+    visibility:inherit;
+}
+
